# epyks

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  epyks.cpp  epyks.h
client/: CMakeLists.txt  main.cpp
client/qt/: logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/jrtplib-3.11.1/: CMakeLists.txt
lib/jrtplib-3.11.1/src/: CMakeLists.txt
proto/: CMakeLists.txt  msg.proto
server/: CMakeLists.txt  main.cpp
